--- a/app/templates/seo/landing.html
+++ b/app/templates/seo/landing.html
@@ -25,7 +25,9 @@
   "publisher": {
     "@type": "Organization",
     "name": "PlantCareAI"
-  }
+  },
+  "datePublished": "{{ page.date_published | default('2026-01-17') }}",
+  "dateModified": "{{ page.date_modified | default('2026-01-30') }}"
 }
 </script>
 <!-- FAQPage Structured Data -->
