--- a/app/templates/legal/terms.html
+++ b/app/templates/legal/terms.html
@@ -24,7 +24,7 @@
 
       <h3 class="text-xl font-semibold text-slate-900 dark:text-slate-100 mt-8 mb-4">3. User Accounts</h3>
       <p class="text-slate-700 dark:text-slate-300 mb-4">
-        To use certain features, you may create an account using magic link authentication. You are responsible for:
+        To use certain features, you may create an account using one-time password (OTP) authentication. You are responsible for:
       </p>
       <ul class="list-disc list-inside space-y-2 text-slate-700 dark:text-slate-300 mb-4">
         <li>Maintaining the security of your email account</li>
