--- a/app/templates/admin/user_detail.html
+++ b/app/templates/admin/user_detail.html
@@ -3,6 +3,8 @@
 {% block title %}User Detail - Admin{% endblock %}
 {% block description %}View detailed user information.{% endblock %}
 
+{% block robots %}<meta name="robots" content="noindex, nofollow">{% endblock %}
+
 {% block content %}
 <!-- Page Header -->
 <div class="mb-8">
