--- a/app/templates/plants/edit.html
+++ b/app/templates/plants/edit.html
@@ -3,6 +3,8 @@
 {% block title %}Edit {{ plant.name }} - Plant Care AI Assistant - PlantCareAI{% endblock %}
 {% block description %}Edit {{ plant.name }} details.{% endblock %}
 
+{% block robots %}<meta name="robots" content="noindex, follow">{% endblock %}
+
 {% block content %}
 <!-- Page Header -->
 <div class="mb-8">
