--- a/app/templates/journal/add_entry.html
+++ b/app/templates/journal/add_entry.html
@@ -3,6 +3,8 @@
 {% block title %}Log Care Activity - {{ plant.name }} - PlantCareAI{% endblock %}
 {% block description %}Record care activities for {{ plant.name }}.{% endblock %}
 
+{% block robots %}<meta name="robots" content="noindex, follow">{% endblock %}
+
 {% block content %}
 <!-- Page Header -->
 <div class="mb-8">
