--- a/app/templates/journal/plant_journal.html
+++ b/app/templates/journal/plant_journal.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ plant.name }} Care Journal - PlantCareAI{% endblock %}
 
+{% block robots %}<meta name="robots" content="noindex, follow">{% endblock %}
+
 {% block content %}
 <!-- Page Header -->
 <div class="mb-8">
