--- a/app/templates/marketing/unsubscribe.html
+++ b/app/templates/marketing/unsubscribe.html
@@ -3,6 +3,8 @@
 {% block title %}Unsubscribe - PlantCareAI{% endblock %}
 {% block description %}Manage your email preferences for PlantCareAI.{% endblock %}
 
+{% block robots %}<meta name="robots" content="noindex, follow">{% endblock %}
+
 {% block content %}
 <div class="max-w-lg mx-auto">
   <div class="card text-center" role="main">
