--- a/app/templates/reminders/create.html
+++ b/app/templates/reminders/create.html
@@ -95,7 +95,7 @@
       <label for="frequency" class="label label-required">
         Frequency
       </label>
-      <select id="frequency" name="frequency" class="input" required aria-required="true" aria-describedby="frequency-help">
+      <select id="frequency" name="frequency" class="input" required aria-required="true" aria-describedby="frequency-help" aria-controls="custom-interval-group">
         <option value="daily">Daily</option>
         <option value="every_2_days">Every 2 Days</option>
         <option value="every_3_days">Every 3 Days</option>
